# tracklab

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SETTINGS_SIMPLIFICATION.md  TRACKLAB_UI_QUICKSTART.md  TRACKLAB_UI_SUMMARY.md  demo_tracklab_ui.py  example_usage.py  fix_test_mode.py  hatch.toml  install_ml_dependencies_cpu.sh  install_torch_cpu.sh  landfill_test_results.txt  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_tracklab_dependencies.sh  test_basic.py  test_landfill.sh  test_tracklab_landfill.py
.circleci/: config.yml
.github/workflows/: check-pr-title.yml  pre-commit.yml  publish-to-pypi.yml  python-tests.yml
docs/: build_strategy.md  local_logging_design.md  system_monitor.md
examples/: local_logging_example.py
landfill/standalone_tests/: all_media_types.py  basic_plots.py  chdir_test.py  dsviz_demo.py  large_artifact_benchmark.py  log_large_data.py  multi_threading_test.py  point_cloud.py  point_cloud_scene.py  pytorch_cuda.py  resume-empty.py  resuming_and_reinit.py  simpsons_data_frames.py  sparse_tensors.py  sweep_check.py  table_mem_test.py  tweets.py
scripts/: analyze_proto_structure.py  build_system_monitor.py  check_large_files.py  clean_commented_code.py  hatch_build.py  refactor_rust_proto.py  split_proto_file.py  test_clean_example.py  update_rust_imports.py  validate_proto_syntax.py
system_monitor/: Cargo.toml  PROTO_MIGRATION_GUIDE.md  PROTO_REFACTOR_SUGGESTION.md  README.md  REFACTORING_COMPLETE.md  debug_rest_api_detailed.py
system_monitor/src/: cpu_monitor.rs  disk_monitor.rs  main.rs  memory_monitor.rs  monitors.rs  network_monitor.rs  rest_api.rs
system_monitor/tools/: build_proto_modular.rs
tests/: __init__.py  conftest.py
tests/assets/: test_data.json  test_mod.py
tests/functional_tests/: __init__.py  test_pytorch_integration.py
tests/integration_tests/: __init__.py  test_e2e_logging.py  test_system_monitor_integration.py
tests/system_tests/: __init__.py  conftest.py  test_performance.py  test_plot.py
tests/unit_tests/: __init__.py  conftest.py  test_api_utils.py  test_asyncio_compat.py  test_autolog_patch_integration.py  test_cli.py  test_core_utils.py  test_data_types.py  test_data_types_box3d.py  test_datastore.py  test_dir_watcher.py  test_docker.py  test_dtypes.py  test_error_util.py  test_file_stats.py  test_file_stream.py  test_handler.py  test_hardware_monitor.py  test_import_wandb.py  test_internal_api.py  test_iterutils.py  test_job_builder.py  test_library_public.py  test_mailbox.py  test_metaflow.py  test_mode_disabled.py  test_model_workflows.py  test_monkeypatch_keras.py  test_normalize.py  test_plot.py  test_profiler.py  test_public_api.py  test_pydantic_v1_compat.py  test_reports.py  test_require_helpers.py  test_require_user.py  test_retry.py  test_run_moment.py  test_sagemaker_config_parse.py  test_sample.py  (+31 more)
tools/: inspect_tool.py  telemetry-tool.py
tracklab/: __init__.py  __init__.pyi  __init__.template.pyi  __main__.py  audio.py  base.py  config_manager.py  data_types.py  env.py  graph.py  jupyter.py  landfill_test_results.txt  object3d.py  plotly.py  sklearn.py  system_monitor.py  table.py  tracklab_agent.py  tracklab_controller.py  tracklab_run.py  util.py  video.py  wandb_agent.py  wandb_controller.py  wandb_run.py
tracklab/_pydantic/: base.py  v1_compat.py
tracklab/agents/: __init__.py  pyagent.py
tracklab/analytics/: __init__.py  cli.py  local_analytics.py  sentry.py  sentry_adapter.py  viewer.py
tracklab/apis/: __init__.py  attrs.py  internal.py  normalize.py  paginator.py  public.py
tracklab/automations/: __init__.py  _utils.py  _validators.py  actions.py  automations.py  events.py  integrations.py  scopes.py
tracklab/backend/: __init__.py
tracklab/beta/: __init__.py  workflows.py
tracklab/cli/: __init__.py  beta.py  cli.py  main.py  ui.py
tracklab/core/: __init__.py  base_models.py  compat.py  core_records.py  deprecated.py  interface.py  progress_types.py  request_response.py  request_types.py  storage.py  utils.py
tracklab/data_types/: __init__.py  chart.py  histogram.py  html.py  image.py
tracklab/docker/: __init__.py
tracklab/errors/: __init__.py  errors.py  links.py  normalize.py  term.py  util.py
tracklab/filesync/: __init__.py  dir_watcher.py  stats.py  step_checksum.py  step_prepare.py  step_upload.py  upload_job.py
tracklab/integration/: __init__.py  torch.py
tracklab/old/: README.md  __init__.py  core.py  settings.py  summary.py
tracklab/plot/: __init__.py  bar.py  confusion_matrix.py  custom_chart.py  histogram.py  line.py  line_series.py  pr_curve.py  roc_curve.py  scatter.py  utils.py  viz.py
tracklab/proto/: analytics.proto  tracklab_base.proto  tracklab_base_pb2.py  tracklab_base_pb2_grpc.py  tracklab_generate_deprecated.py  tracklab_generate_proto.py  tracklab_internal.proto  tracklab_internal_pb2.py  tracklab_internal_pb2_grpc.py  tracklab_server.proto  tracklab_server_pb2.py  tracklab_server_pb2_grpc.py  tracklab_settings.proto  tracklab_settings_pb2.py  tracklab_settings_pb2_grpc.py  tracklab_system_monitor.proto  tracklab_system_monitor_pb2.py  tracklab_system_monitor_pb2_grpc.py  tracklab_telemetry.proto  tracklab_telemetry_pb2.py  tracklab_telemetry_pb2_grpc.py  wandb_base_pb2.py  wandb_generate_deprecated.py  wandb_internal_pb2.py  wandb_server_pb2.py  wandb_settings_pb2.py  wandb_telemetry_pb2.py
tracklab/sdk/: README.md  __init__.py  alerts.py  config.py  hardware_monitor.py  helper.py  init.py  local_logger.py  require.py  run.py  settings.py  setup.py  summary.py  sweep.py  sync.py  tracklab_config.py  tracklab_init.py  tracklab_login.py  tracklab_require_helpers.py  tracklab_run.py  tracklab_settings.py  tracklab_setup.py  tracklab_summary.py  tracklab_sweep.py  tracklab_sync.py  tracklab_watch.py  wandb_config.py  wandb_helper.py  wandb_init.py  wandb_login.py  wandb_metric.py  wandb_require.py  wandb_run.py  wandb_settings.py  wandb_setup.py  wandb_sweep.py  wandb_sync.py  wandb_watch.py  watch.py
wandb/: latest-run
(+651 files in other folders)
